--- a/lang/macro/Cargo.toml
+++ b/lang/macro/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/727-Ventures/openbrush-contracts"
 documentation = "https://docs.openbrush.io"
 homepage = "https://727.ventures"
 description = "OpenBrush macros to extend functionality of the ink!."
-keywords = ["wasm", "supercolony", "smart-contracts", "blockchain", "ink"]
+keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
 categories = ["no-std", "embedded"]
 include = ["Cargo.toml", "src/**/*.rs"]
 
