--- a/lang/codegen/Cargo.toml
+++ b/lang/codegen/Cargo.toml
@@ -18,6 +18,7 @@ syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
 quote = "1"
 proc-macro2 = "1"
 serde_json = "1.0.64"
+darling = "0.14"
 fs2 = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 cargo_metadata = "0.13.1"
