--- a/lang/codegen/Cargo.toml
+++ b/lang/codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openbrush_lang_codegen"
-version = "3.1.1"
+version= "4.0.0-beta"
 authors = ["Brushfam <green@727.ventures>"]
 edition = "2021"
 
