--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -16,7 +16,7 @@ include = ["Cargo.toml", "src/**/*.rs"]
 [dependencies]
 openbrush_lang_macro = { version = "~4.0.0-beta", path = "macro", default-features = false }
 
-ink = { version = "4.2.1", default-features = false}
+ink = { git = "https://github.com/paritytech/ink", rev = "a71990f",  default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"] }
 
