initial implementation of non-upgradeable-lazy feature

--- a/lang/macro/Cargo.toml
+++ b/lang/macro/Cargo.toml
@@ -37,3 +37,5 @@ default = ["std"]
 std = [
     "openbrush_lang_codegen/std",
 ]
+non-upgradeable-lazy = [
+    "openbrush_lang_codegen/non-upgradeable-lazy"]
