--- a/lang/Cargo.toml
+++ b/lang/Cargo.toml
@@ -16,7 +16,7 @@ include = ["Cargo.toml", "src/**/*.rs"]
 [dependencies]
 openbrush_lang_macro = { version = "~4.0.0-beta.1", path = "macro", default-features = false }
 
-ink = { version = "4.3.0", default-features = false}
+ink = { version = "5.0.0-alpha", default-features = false}
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"] }
 
