--- a/lang/macro/Cargo.toml
+++ b/lang/macro/Cargo.toml
@@ -20,7 +20,7 @@ proc-macro2 = "1"
 synstructure = "0.12"
 
 [dev-dependencies]
-ink = { version = "4.3.0", default-features = false}
+ink = { version = "5.0.0-alpha", default-features = false}
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"] }
