--- a/lang/codegen/Cargo.toml
+++ b/lang/codegen/Cargo.toml
@@ -24,8 +24,8 @@ cargo_metadata = "0.13.1"
 unwrap = "1.2.1"
 blake2 = "0.10.6"
 heck = "0.3.1"
-ink_ir = { version = "4.2.1", default-features = false }
-ink_primitives = { version = "4.2.1", default-features = false }
+ink_ir = { version = "5.0.0-alpha", default-features = false }
+ink_primitives = { version = "5.0.0-alpha", default-features = false }
 synstructure = "0.12"
 
 [lib]
